--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "bs-components": "^0.0.9",
     "vue": "^2.5.17"
   },
   "devDependencies": {
